<resources>
    <string name="app_name">吃食堂</string>
    <string name="title_home">主页</string>
    <string name="title_order">订单</string>
    <string name="title_userinfor">个人中心</string>
    <string name="title_special">特色功能</string>
    <string name="add">+</string>

    <string name="update">版本更新</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="back">取消</string>
    <string name="vote">投票</string>
    <string name="uprefresh">上滑查看</string>
    <string name="refresh">下拉刷新</string>
    <string name="choose_all">全选</string>
    <string name="register">注册</string>
    <string name="getcode">获取验证码</string>
    <string name="next">下一步</string>
    <string name="login">登陆</string>
    <string name="search">搜索</string>、
    <string name="shoppingcar">购物车</string>
    <string name="point">积分</string>
    <string name="coin">金币</string>
    <string name="red">红包</string>
    <!--主产品界面-->
    <string name="show_details">查看详情</string>
    <string name="show_evaluates">查看评价</string>
    <string name="product_all">所有美食</string>
    <string name="product_special">特色美食</string>
    <string name="product_vote">众筹美食</string>
    <string name="product_fruit">瓜果生鲜</string>
    <!--注册界面-->
    <string name="register_hint_account">请输入您的姓名</string>
    <string name="register_hint_password">请输入您的密码</string>
    <string name="register_hint_email">请输入您的邮箱</string>
    <string name="register_hint_phone">请输入您的电话</string>
    <string name="register_hint_code">请输入您收到的验证码</string>
    <!--登陆界面-->
    <string name="login_hint_login">登录</string>
    <string name="login_hint_email">账号</string>
    <string name="login_hint_password">密码</string>
    <string name="login_hint_account">请输入您的手机号或邮箱</string>
    <string name="login_hint_forgetpsd">忘记密码？</string>
    <string name="login_hint_inputpassword">请输入您的密码</string>
    <string name="login_hint_rememberpsd">记住密码</string>
    <string name="login_hint_to_register">还没有账号？注册一个！</string>
    <!--订单界面-->
    <string name="order_hint_order_doubt">对此订单有疑问？↑</string>
    <string name="order_hint_order_id">订单ID： </string>
    <string name="order_hint_user_id">用户ID： </string>
    <string name="order_hint_order_amount">订单金额： </string>
    <string name="order_hint_order_time">订单时间： </string>
    <string name="order_hint_order_look">查看订单</string>
    <string name="order_hint_order_code">查看二维码</string>
    <string name="order_show_nologin">您尚未登陆！请登录！</string>
    <string name="order_hint_order_evaluate">评价菜品</string>
    <!--搜索界面-->
    <string name="search_hint_inputsearchmessage">请输入搜索信息</string>
    <string name="search_hint_search_clear">清空搜索信息</string>
    <!--清除登录数据-->
    <string name="clear">退出登录</string>
    <!--产品信息-->
    <string name="product_hint_product_name">菜品名称：</string>
    <string name="product_hint_product_price">菜品价格：</string>
    <string name="product_hint_product_details">菜品详情：</string>
    <string name="product_hint_addto_cart">加入购物车</string>
    <!--购物车-->
    <string name="shoppingcar_hint_amount">总数：</string>
    <string name="shoppingcar_hint_settlement">结算(0)</string>
    <string name="shoppingcar_hint_edit">编辑</string>
    <string name="shoppingcar_hint_total">合计 0.00</string>
    <!--投票界面-->
    <string name="votenum">得票数：</string>
    <string name="logout">退出</string>
    <!--评价界面-->
    <string name="input_evaluate_message">请输入您的评价：</string>
    <!--用户信息界面-->
    <string name="user_hint_myevaluate">我的评价</string>
    <string name="user_hint_myfavorite">我的收藏</string>
    <string name="user_hint_myhelper">我的客服</string>
    <string name="user_hint_joinus">加盟合作</string>
    <string name="user_change_head">更改头像</string>
    <string name="user_change_telephone">更改手机号</string>
    <string name="user_change_email">更改邮箱</string>
    <string name="user_change_name">更改姓名</string>
    <string name="user_change_password">更改密码</string>
    <!--众筹界面-->
    <string name="crowdfund_name">请输入菜品名</string>
    <string name="crowdfund_detail">请输入菜品详情</string>
    <string name="crowdfund_money">请输入目标金额</string>
    <string name="crowdfund_declaration">请输入宣言</string>
    <string name="btn_submit">确认并上传</string>
    <string name="dynamic_txt">说点什么吧~~~~~</string>

</resources>
