<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height2"
        android:background="@color/gray_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderlist_orders_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:layout_weight="1.3"
            android:text="@string/order_hint_order_id"
            android:textColor="@color/black_80"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <View
            android:layout_width="@dimen/line_height1"
            android:layout_height="match_parent"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/orderlist_users_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:layout_weight="1.3"
            android:text="@string/order_hint_user_id"
            android:textColor="@color/black_80"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <View
            android:layout_width="@dimen/line_height1"
            android:layout_height="match_parent"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/orderlist_orders_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/order_hint_order_amount"
            android:textColor="@color/black_80"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="@dimen/line_height1"
    android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderlist_orders_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/order_hint_order_time"
            android:textColor="@color/black_80"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/orderlist_orders_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/order_btn"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:elevation="0dp"
            android:text="@string/order_hint_order_look" />
    </LinearLayout>

    <TextView
        android:id="@+id/doubt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_hint_order_doubt" />

</LinearLayout>
