<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Per"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/personalcenter_roundedmage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/eat"
            app:riv_border_color="@color/b_red_lighter"
            app:riv_border_width="1dp"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/user_change_head"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="15dp"
            android:layout_weight="3"
            android:drawableEnd="@mipmap/ic_goright"
            android:gravity="center"
            android:text="@string/user_change_head"
            android:textSize="@dimen/text_size_2sp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/login_input_rounded_bg"
        android:gravity="center">

        <TextView
            android:id="@+id/user_change_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/user_change_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height1"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/user_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/user_change_password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height1"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/user_change_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/user_change_telephone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height1"
            android:background="@color/line_bg" />

        <TextView
            android:id="@+id/user_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/user_change_email" />

    </LinearLayout>

    <Button
        android:id="@+id/personalcenter_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corner_btn"
        android:text="@string/logout"
        android:textColor="@color/white" />

</LinearLayout>