<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/listview_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_imageview"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:contentDescription="@string/product_hint_product_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/product_hint_product_name" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/product_hint_product_price" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height1"
                android:background="@color/line_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:text="@string/shoppingcar_hint_amount" />

                <TextView
                    android:id="@+id/product_ourprice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:layout_weight="1"
                    android:text="@string/shoppingcar_hint_total" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1">

                <Button
                    android:id="@+id/order_hint_order_evaluate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/corner_btn"
                    android:text="@string/order_hint_order_evaluate"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>