<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include-->
        <!--android:id="@+id/shopping_title"-->
        <!--layout="@layout/layout_title" />-->

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:text="@string/shoppingcar_hint_edit"
        android:textSize="18dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_edit"
        android:background="@color/gray_20" />


    <ListView
        android:id="@+id/list_shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tv_edit"
        android:layout_weight="1"
        android:scrollbars="none" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_20" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">


        <CheckBox
            android:id="@+id/ck_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:button="@drawable/shoppingcar_check_box"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:text="@string/choose_all"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/SpringGreen" />


        <Button
            android:id="@+id/tv_settlement"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/shoppingcar_hint_settlement"
            android:textColor="@color/DarkRed" />


        <TextView
            android:id="@+id/tv_show_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/tv_settlement"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/shoppingcar_hint_total"
            android:textColor="@color/SpringGreen" />
    </RelativeLayout>

</LinearLayout>