<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoPanelHeight="35dp"
        sothree:umanoShadowHeight="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/vote_details_toolbar"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent" >

            </android.support.v7.widget.Toolbar>

            <ImageView
                android:id="@+id/vote_details_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                app:srcCompat="@drawable/eat"
                android:contentDescription="@string/app_name" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">

                <TextView
                    android:id="@+id/vote_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="30dp"
                    android:text="@string/product_hint_product_name"
                    android:typeface="sans"/>

                <TextView
                    android:id="@+id/vote_details_votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="100dp"
                    android:text="@string/votenum"
                    android:typeface="sans"/>

            </FrameLayout>

            <TextView
                android:id="@+id/vote_details_details"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:typeface="sans"
                android:background="@drawable/border"
                android:text="@string/app_name"/>

            <Button
                android:id="@+id/vote_details_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_chocolate_wide"
                android:text="@string/vote"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/lightcyan"
                android:gravity="center|top"
                android:text="@string/uprefresh" />

            <ListView
                android:id="@+id/vote_evaluate_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>



</LinearLayout>