<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/LInfLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_input_rounded_bg"
        android:orientation="horizontal"
        android:visibility="visible">


        <TextView
            android:id="@+id/personalcenter_red"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/red" />

        <TextView
            android:id="@+id/personalcenter_point"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/point" />

        <TextView
            android:id="@+id/personalcenter_coin"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coin" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_input_rounded_bg"
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <Button
        android:id="@+id/personalcenter_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/corner_btn"
        android:text="@string/logout"
        android:textColor="@color/white" />

</LinearLayout>